@@ -339,10 +339,13 @@ void MainWindow::saveSettings()
     appConfig().setConfigFile(m_pLineEditConfigFile->text());
     appConfig().setServerHostname(m_pLineEditHostname->text());
 
-
-    //Save everything
+    /* Save everything
+     * ConfigWriter is a singlethon hence we should call destroy
+     * During destroy the ConfigWriter destroys QSetting which saves all settings to file.
+     * Before destroy all settings are stored only in memmory.
+    */
     GUI::Config::ConfigWriter::make()->globalSave();
-
+    GUI::Config::ConfigWriter::destroy();
 }
 
 void MainWindow::zeroConfToggled() {
